[package]
name = "identity_dal"
version = "0.1.0"
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.7.3"
rust-argon2 = "0.8"
sled = { version = "0.34.0" }
bincode = "1.3.1"
regex = "1"
lazy_static = "1.4.0"
log = "0.4.0"