[package]
name = "identity_dal"
version = "0.1.0"
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.7.3"
rust-argon2 = "0.8"
sled = "0.34.3"
serde_cbor = "0.11.1"
regex = "1"
lazy_static = "1.4.0"
log = "0.4.0"