[package]
name = "identity_service"
version = "0.1.0"
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"

[dependencies]
identity_dal = { path="../identity_dal" }
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "5.0.1"
chrono = "0.4"
log = "0.4.0"
lettre = "0.9.3"
lettre_email = "0.9"