cargo-features = ["strip"]

[package]
name = "identity_web"
version = "0.1.0"
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"

[dependencies]
rocket="0.4.5"
identity_service = { path="../identity_service" }
log = "0.4.0"
env_logger = "0.7.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
overflow-checks = false
strip="symbols"
incremental = false
debug = 0
debug-assertions = false

[build]
RUSTFLAGS="-C target-cpu=native target-feature=-crt-static link-arg=-s"