[package]
name = "identity_web"
version = "0.1.0"
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"

[dependencies]
rocket= { version = "0.4.5", features = [ "tls" ], default-features=false }
identity_service = { path="../identity_service" }
log = "0.4.0"
env_logger = "0.7.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[build]
RUSTFLAGS="-C target-cpu=native"